syntax = "proto3";

option csharp_namespace = "KafkaEventsSender";

package kafkaEventsSender;

service RpmService {
  rpc CreateRpm(CreateRpmRequest) returns (RpmReply);
  rpc GetRpm(GetRpmRequest) returns (RpmReply);
  rpc UpdateRpm(UpdateRpmRequest) returns (RpmReply);
  rpc DeleteRpm(DeleteRpmRequest) returns (RpmReply);
}

message CreateRpmRequest {
  string user_id = 1;
  string endpoint = 2;
  int32 rpm = 3;
}

message UpdateRpmRequest {
  string user_id = 1;
  string endpoint = 2;
  int32 rpm = 3;
}

message GetRpmRequest {
  string user_id = 1;
  string endpoint = 2;
}

message DeleteRpmRequest {
  string user_id = 1;
  string endpoint = 2;
}

message RpmReply {
  string user_id = 1;
  string endpoint = 2;
  int32 rpm = 3;
}
